Additional information and layout
Now returns genre information and manga cover. Updated layout of site.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <h1>Manga Downloader and Reader</h1>
-        <p id=list><script>require('./scraper.js')</script></p>
+        <ul id=list><script>require('./scraper.js')</script></ul>
 
     </header>
   </body>
