Updated Search, Using Bulma CSS

--- a/manga.html
+++ b/manga.html
@@ -24,7 +24,7 @@
             <nav class="tabs is-boxed is-fullwidth">
                 <div class="container">
                     <ul>
-                        <li class="is-active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="catalog.html">Catalog</a></li>
                         <li><a href="search.html">Search</a></li>
                         <li><a href="sources.html">Sources</a></li>
@@ -38,15 +38,12 @@
 
     <div class="container">
         <section class="section">
-            <div class="content">
-                <div class="columns is-multiline is-mobile" id="list">
-
-                </div>
+            <div class="content" id=content>
+                
             </div>
         </section>
     </div>
 
-    <script>require('./scraper.js')</script>
 </body>
 
 </html>
