--- a/sources.html
+++ b/sources.html
@@ -24,10 +24,10 @@
             <nav class="tabs is-boxed is-fullwidth">
                 <div class="container">
                     <ul>
-                        <li class="is-active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="catalog.html">Catalog</a></li>
                         <li><a href="search.html">Search</a></li>
-                        <li><a href="sources.html">Sources</a></li>
+                        <li class="is-active"><a href="sources.html">Sources</a></li>
                         <li><a href="favourites.html">Favourites</a></li>
                         <li><a href="downloads.html">Downloads</a></li>
                     </ul>
@@ -35,18 +35,6 @@
             </nav>
         </div>
     </section>
-
-    <div class="container">
-        <section class="section">
-            <div class="content">
-                <div class="columns is-multiline is-mobile" id="list">
-
-                </div>
-            </div>
-        </section>
-    </div>
-
-    <script>require('./scraper.js')</script>
 </body>
 
 </html>
